kubernetes/infrastructure-config/adguard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home
  namespace: adguard
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "adguard.catinthehack.ca"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard-home
          port: 3000
